--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="format-detection" content="address=no">
     <title>个人中心</title>
     <script type="text/javascript" src="./static/js/font.js"></script>
+    <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+    <script type="text/javascript" src="http://test.wx.cntv.cn/bootstrap/js/jquery-1.11.1.min.js?"></script>
+    <script src="http://static.qr.cntv.cn/weixin/static/js/jssdk.js"></script>
   </head>
   <body>
     <div id="app" v-clock></div>
